COA-490 fix header and fix scrollbar

--- a/pages/_steps.scss
+++ b/pages/_steps.scss
@@ -4,6 +4,10 @@
   height: 80%;
   overflow-y: scroll;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   .LabelSteps {
     @include primary-text($label, $grey, 500);
     text-transform: uppercase;
